<resources>
    <string name="app_name">CekOngkir</string>

    <string name="tv_greetings">Hello,</string>
    <string name="tv_greetings_sub">Ingin memerika harga ongkos kirim barangmu?</string>
    <string name="card_title">Cek harga ongkos kirim</string>
    <string name="title_from">Dikirim dari</string>
    <string name="hint_from">Kabupaten/provinsi</string>
    <string name="title_to">Dikirim ke</string>
    <string name="hint_to">Kabupaten/provinsi</string>
    <string name="btn_check">Cek harga</string>
    <string name="title_weight">Berat (gram)</string>
    <string name="tv_error_input_blank">Field tidak boleh kosong!</string>
    <string name="tv_courier">Pilih kurir</string>
    <string name="tv_judul_pilih_kota_asal">Pilih kota asal</string>
    <string name="tv_sub_pilih_kota_asal">Dari mana barang yang kamu kirimkan?</string>
    <string name="tv_judul_pilih_kota_tujuan">Pilih kota tujuan</string>
    <string name="tv_sub_pilih_kota_tujuan">Ke mana kamu ingin mengirimkan barang?</string>
    <string name="hint_cari_kota">Cari kota/kabupaten</string>
    <string name="tv_item_city">Semarang</string>
    <string name="tv_item_type">Kabupaten</string>
    <string name="tv_item_province">Jawa Tengah</string>
    <string name="tv_title_result">Ini dia perkiraan ongkos kirimmu :)</string>
    <string name="tv_title_origin">Asal barang:</string>
    <string name="tv_title_destination">Tujuan barang:</string>

</resources>