<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.searchcity.SearchCityActivity">

    <TextView
        android:id="@+id/tv_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/jakartasans_regular"
        tools:text="@string/tv_judul_pilih_kota_asal"
        android:textColor="@color/primary_500"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_greeting_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/jakartasans_semibold"
        android:text="@string/tv_sub_pilih_kota_asal"
        android:textColor="@color/primary_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greetings" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting_sub"
        android:fontFamily="@font/jakartasans_regular"
        android:hint="@string/hint_cari_kota"
        android:textColorHint="@color/black_200"
        android:textSize="16sp"
        app:boxStrokeColor="@color/black_200">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black_400" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_search"
        android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>