<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.resultcost.ResultCostActivity">

    <View
        android:id="@+id/overlayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/iv_logo_app"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jakartasans_semibold"
        android:text="@string/tv_title_result"
        android:textColor="@color/primary_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_app" />

    <LinearLayout
        android:id="@+id/linear_layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_result">

        <LinearLayout
            android:id="@+id/linear_layout_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_regular"
                android:text="@string/tv_title_origin"
                android:textColor="@color/black_200"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_city_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_semibold"
                android:textColor="@color/primary_500"
                android:textSize="16sp"
                tools:text="Aceh Selatan, Kota" />

            <TextView
                android:id="@+id/tv_province_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_regular"
                android:textColor="@color/primary_500"
                android:textSize="14sp"
                tools:text="Nangroe Aceh Darussalam (NAD)" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_regular"
                android:text="@string/tv_title_destination"
                android:textColor="@color/black_200"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_city_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_semibold"
                android:textColor="@color/primary_500"
                android:textSize="16sp"
                tools:text="Aceh Selatan, Kota" />

            <TextView
                android:id="@+id/tv_province_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_regular"
                android:textColor="@color/primary_500"
                android:textSize="14sp"
                tools:text="Nangroe Aceh Darussalam (NAD)" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_courier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_address">

        <ImageView
            android:id="@+id/iv_logo_courier"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_tiki" />

        <LinearLayout
            android:id="@+id/linear_layout_courier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_courier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_semibold"
                android:textColor="@color/primary_500"
                android:textSize="16sp"
                tools:text="Citra Van Titipan Kilat (TIKI)" />

            <TextView
                android:id="@+id/tv_courier_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jakartasans_regular"
                android:textColor="@color/black_200"
                android:textSize="12sp"
                tools:text="tiki" />

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_courier"
        tools:listitem="@layout/item_result" />

</androidx.constraintlayout.widget.ConstraintLayout>